--- a/key-generator.html
+++ b/key-generator.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +7,19 @@
     <title>Generador de contraseñas</title>
 </head>
 <body>
-    <header>
-        <h1>Titulo de prueba</h1>
-    </header>
+    <main id="main" class="main">
+        <section id="key-gen" class="key-gen">
+            <div id="title" class="title">
+                <h2>Generador de contraseñas</h2>
+            </div>
+            <div id="form" class="form">
+                <label for="characters">Número de caracteres</label>
+                <input type="number" id="characters" value="12" min="12" max="50">
+                <button id="btnPassGen">Generar contraseña</button>
+            </div>
+
+        </section>
+    </main>
     <script src="./JS/script.js"></script>
     <script src="./JS/key-Generator.js"></script>
 </body>
