obtener valor numerico del i[Cnput

--- a/key-generator.html
+++ b/key-generator.html
@@ -13,8 +13,8 @@
                 <h2>Generador de contraseñas</h2>
             </div>
             <div id="form" class="form">
-                <label for="characters">Número de caracteres</label>
-                <input type="number" id="characters" value="12" min="12" max="50">
+                <label for="charactersInput">Número de caracteres</label>
+                <input type="number" id="charactersInput" value="12" min="12" max="50">
                 <button id="btnPassGen">Generar contraseña</button>
             </div>
 
@@ -24,3 +24,5 @@
     <script src="./JS/key-Generator.js"></script>
 </body>
 </html>
+
+
