impresion resultado en el DOM

--- a/key-generator.html
+++ b/key-generator.html
@@ -16,6 +16,7 @@
                 <label for="charactersInput">Número de caracteres</label>
                 <input type="number" id="charactersInput" value="12" min="12" max="50">
                 <button id="btnPassGen">Generar contraseña</button>
+                <div id="result" class="result"></div>
             </div>
 
         </section>
