--- a/Widget-Weather.html
+++ b/Widget-Weather.html
@@ -8,11 +8,9 @@
 </head>
 <body>
     <main id="main" class="main">
-        <section id="Widget-Weather" class="Widget-Weather">
-            <div id="weather" class="weather">
+        <section id="widget-weather" class="widget-weather">
                 <div id="currentWeather" class="currentWeather"></div>
-                <div id="forecastWeather" class="forecastWeather"></div>
-            </div>
+                <ul id="forecastWeather" class="forecastWeather"></ul>
         </section>
     </main>
     <script src="./JS/script.js"></script>
