--- a/digital-clock.html
+++ b/digital-clock.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <main>
+        <section class="digital-clock">
+            <div id="clock" class="clock"></div>
+
+        </section>
     </main>
     <script src="./JS/digital-clock.js"></script>
     <script src="./JS/script.js"></script>
