reloj y fecha refrescandose

--- a/digital-clock.html
+++ b/digital-clock.html
@@ -10,6 +10,7 @@
     <main>
         <section class="digital-clock">
             <div id="clock" class="clock"></div>
+            <div id="date" class="date"></div>
 
         </section>
     </main>
