--- a/digital-clock.html
+++ b/digital-clock.html
@@ -7,11 +7,11 @@
     <title>Reloj Digital</title>
 </head>
 <body>
-    <main>
+    <main class="main-clock">
         <section class="digital-clock">
             <div id="clock" class="clock"></div>
             <div id="date" class="date"></div>
-
+            <div id="tip" class="tip"></div>
         </section>
     </main>
     <script src="./JS/digital-clock.js"></script>
