--- a/Widget-Weather.html
+++ b/Widget-Weather.html
@@ -13,6 +13,14 @@
                 <ul id="forecastWeather" class="forecastWeather"></ul>
         </section>
     </main>
+    <footer class="footer">
+        <nav>
+          <a href="./digital-clock.html"><img src="./images/reloj.png" alt="clock"></a>
+          <a href="./key-generator.html"><img src="./images/candado.png" alt="lock"></a>
+          <a href="./link-list.html"><img src="./images/enlace.png" alt="link"></a>
+          <a href="./Widget-Weather.html"><img src="./images/nube.png" alt="cloud"></a>
+        </nav>
+    </footer>
     <script src="./JS/script.js"></script>
     <script src="./JS/Widget-Weather.js"></script>
 </body>
