--- a/key-generator.html
+++ b/key-generator.html
@@ -20,6 +20,14 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <nav>
+          <a href="./digital-clock.html"><img src="./images/reloj.png" alt="clock"></a>
+          <a href="./key-generator.html"><img src="./assets/img/candado.png" alt="lock"></a>
+          <a href="./short-list.html"><img src="./assets/img/enlace.png" alt="link"></a>
+          <a href="./weather.html"><img src="./assets/img/nube.png" alt="cloud"></a>
+        </nav>
+      </footer>
     <script src="./JS/script.js"></script>
     <script src="./JS/key-Generator.js"></script>
 </body>
