--- a/link-list.html
+++ b/link-list.html
@@ -24,6 +24,14 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <nav>
+          <a href="./digital-clock.html"><img src="./images/reloj.png" alt="clock"></a>
+          <a href="./key-generator.html"><img src="./images/candado.png" alt="lock"></a>
+          <a href="./link-list.html"><img src="./images/enlace.png" alt="link"></a>
+          <a href="./Widget-Weather.html"><img src="./images/nube.png" alt="cloud"></a>
+        </nav>
+    </footer>
 <script src="./JS/link-list.js"></script>
 <script src="./JS/script.js"></script>    
 </body>
