--- a/Widget-Weather.html
+++ b/Widget-Weather.html
@@ -7,6 +7,12 @@
     <title>Estación Meteorológica</title>
 </head>
 <body>
+    <header class="header">
+        <a href="./index.html">
+            <img src="./images/hogar.png" alt="hogar">
+            <h2>TO DASHBOARD HOME</h2>
+        </a>
+    </header>
     <main id="main" class="main">
         <section id="widget-weather" class="widget-weather">
                 <div id="currentWeather" class="currentWeather"></div>
@@ -15,10 +21,10 @@
     </main>
     <footer class="footer">
         <nav>
-          <a href="./digital-clock.html"><img src="./images/reloj.png" alt="clock"></a>
-          <a href="./key-generator.html"><img src="./images/candado.png" alt="lock"></a>
-          <a href="./link-list.html"><img src="./images/enlace.png" alt="link"></a>
-          <a href="./Widget-Weather.html"><img src="./images/nube.png" alt="cloud"></a>
+          <a href="./digital-clock.html"><img src="./images/reloj.png" alt="reloj"></a>
+          <a href="./key-generator.html"><img src="./images/candado.png" alt="candado"></a>
+          <a href="./link-list.html"><img src="./images/enlace.png" alt="enlace"></a>
+          <a href="./Widget-Weather.html"><img src="./images/nube.png" alt="nube"></a>
         </nav>
     </footer>
     <script src="./JS/script.js"></script>
