--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="tip" class="tip"></div>
         </section>    
         
-    <section id="key-gen" class="key-gen">
+        <section id="key-gen" class="key-gen">
             <div id="title" class="title">
                 <h2>Generador de contraseñas</h2>
             </div>
@@ -50,10 +50,10 @@
         
         <footer class="footer">
             <nav>
-              <a href="./digital-clock.html"><img src="./images/reloj.png" alt="clock"></a>
-              <a href="./key-generator.html"><img src="./images/candado.png" alt="lock"></a>
-              <a href="./link-list.html"><img src="./images/enlace.png" alt="link"></a>
-              <a href="./Widget-Weather.html"><img src="./images/nube.png" alt="cloud"></a>
+              <a href="./digital-clock.html"><img src="./images/reloj.png" alt="reloj"></a>
+              <a href="./key-generator.html"><img src="./images/candado.png" alt="candado"></a>
+              <a href="./link-list.html"><img src="./images/enlace.png" alt="enlace"></a>
+              <a href="./Widget-Weather.html"><img src="./images/nube.png" alt="nube"></a>
             </nav>
         </footer>
     </main>
