--- a/link-list.html
+++ b/link-list.html
@@ -7,11 +7,17 @@
     <title>Listado de Enlaces</title>
 </head>
 <body>
+    <header class="header">
+        <a href="./index.html">
+            <img src="./images/hogar.png" alt="hogar">
+            <h2>TO DASHBOARD HOME</h2>
+        </a>
+    </header>
     <main id="linksMain" class="linksMain">
         <section id="linkForm" class="linkForm">
             <div id="link-container" class="link-container">
                 <div class="link-title">
-                    <h1>Crea tu lista de Enlaces</h1>
+                    <h1>CREA TU LISTA DE ENLACES</h1>
                 </div>
                 <div id="link-input" class="link-input">
                     <input id="inputTitle" type="text" placeholder="Escribe un título para la URL" name="inputTitle" value="" required>
@@ -26,10 +32,10 @@
     </main>
     <footer class="footer">
         <nav>
-          <a href="./digital-clock.html"><img src="./images/reloj.png" alt="clock"></a>
-          <a href="./key-generator.html"><img src="./images/candado.png" alt="lock"></a>
-          <a href="./link-list.html"><img src="./images/enlace.png" alt="link"></a>
-          <a href="./Widget-Weather.html"><img src="./images/nube.png" alt="cloud"></a>
+          <a href="./digital-clock.html"><img src="./images/reloj.png" alt="reloj"></a>
+          <a href="./key-generator.html"><img src="./images/candado.png" alt="candado"></a>
+          <a href="./link-list.html"><img src="./images/enlace.png" alt="enlace"></a>
+          <a href="./Widget-Weather.html"><img src="./images/nube.png" alt="nube"></a>
         </nav>
     </footer>
 <script src="./JS/link-list.js"></script>
