--- a/key-generator.html
+++ b/key-generator.html
@@ -7,6 +7,12 @@
     <title>Generador de contraseñas</title>
 </head>
 <body>
+    <header class="header">
+        <a href="./index.html">
+            <img src="./images/hogar.png" alt="hogar">
+            <h2>TO DASHBOARD HOME</h2>
+        </a>
+    </header>
     <main id="main" class="main">
         <section id="key-gen" class="key-gen">
             <div id="title" class="title">
@@ -22,10 +28,10 @@
     </main>
     <footer class="footer">
         <nav>
-          <a href="./digital-clock.html"><img src="./images/reloj.png" alt="clock"></a>
-          <a href="./key-generator.html"><img src="./assets/img/candado.png" alt="lock"></a>
-          <a href="./short-list.html"><img src="./assets/img/enlace.png" alt="link"></a>
-          <a href="./weather.html"><img src="./assets/img/nube.png" alt="cloud"></a>
+          <a href="./digital-clock.html"><img src="./images/reloj.png" alt="reloj"></a>
+          <a href="./key-generator.html"><img src="./images/candado.png" alt="candado"></a>
+          <a href="./link-list.html"><img src="./images/enlace.png" alt="enlace"></a>
+          <a href="./Widget-Weather.html"><img src="./images/nube.png" alt="nube"></a>
         </nav>
       </footer>
     <script src="./JS/script.js"></script>
